test/fail/import/repeat_import_as.lly
#[
SyntaxError: A module named 'empty' has already been imported here.
    from repeat_import_as.lly:7:
]#

import repeat_a as empty
import empty
